[package]
name = "wz"
version = "0.1.0"
repository = "https://github.com/broomstar/wz-rust"
description = "Native bindings to the libwz library"
edition = "2018"

[dependencies]
libz-sys = "1.1.2"
once_cell = "1.5.2"
num-traits = "0.2"
num-derive = "0.3"

[build-dependencies]
bindgen = "0.57.0"
cc = "1.0"
