[package]
name = "wz"
version = "0.1.0"
repository = "https://github.com/broomstar/wz-rust"
description = "Native bindings to the libwz library"
edition = "2018"

[dependencies]
libz-sys = "1.1.2"
num-traits = "0.2.14"
num-derive = "0.3.3"
image = "0.23.14"

[build-dependencies]
bindgen = "0.58.1"
cc = "1.0.67"
