[package]
name = "wz"
version = "0.1.0"
repository = "https://github.com/broomstar/wz-rust"
description = "Native bindings to the libwz library"
edition = "2018"

[dependencies]
libz-sys = "1.1.8"
num-traits = "0.2.15"
num-derive = "0.3.3"
anyhow = "1.0.70"
glam = "0.23.0"

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
